@@ -1,9 +1,13 @@
 {
     "name": "flow5",
     "version": "0.1.1",
-	"description": "powerful but lightweight hybrid web/native framework and toolset for building apps and webapps",
+	"description": "framework and toolset for developing mobile apps and webapps",
 	"keywords": ["ios", "iphone", "android", "html5", "fat client", "templating", "ajax", "hybrid", "mobile app", "webapp"],
 	"bugs": "",
+	"author":{ 
+		"name" : "Paul Greyson",
+		"email" : "paul@flow5.com"
+	},
 	"os": ["darwin"],
 	"repository": { 
 		"type" : "git",
@@ -18,7 +22,6 @@
     "dependencies": {
 		"cli": "0.4.0",
 		"css-compressor": "1.0.0",
-		"node-ffi": "0.5.0",
 		"paperboy": "0.0.3",
 		"async": "0.1.22",
 		"minifyjs": "0.1.0",
